# xen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  imgui.ini  test_scheme2.json
depends/: CMakeLists.txt
depends/bullet3/: CMakeLists.txt
depends/catch/: CMakeLists.txt
depends/entt/: CMakeLists.txt
depends/fastgltf/: CMakeLists.txt
depends/glad/: CMakeLists.txt
depends/glad/src/: glad.c
depends/glew/: CMakeLists.txt
depends/glfw/: CMakeLists.txt
depends/glm/: CMakeLists.txt
depends/imgui/: CMakeLists.txt
depends/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_extension.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  (+1 more)
depends/lua/: CMakeLists.txt
depends/magic_enum/: CMakeLists.txt
depends/nlohmann_json/: CMakeLists.txt
depends/openxr/: CMakeLists.txt
depends/rocket/: CMakeLists.txt
depends/simdjson/: CMakeLists.txt
depends/sol2/: CMakeLists.txt
depends/stb/: CMakeLists.txt
depends/stb_image/: CMakeLists.txt
depends/tracy/: CMakeLists.txt
examples/just_app/: CMakeLists.txt  demo_utils.cpp  demo_utils.hpp  main.cpp  test_scheme.json  test_scheme2.json
src/: CMakeLists.txt  application.cpp  application.hpp  application.inl  component.hpp  component.inl  core.hpp  entity.cpp  entity.hpp  entity.inl  main.cpp  prec.hpp  stdafx.hpp  system.cpp  system.hpp  system.inl  world.cpp  world.hpp  world.inl  xen copy.hpp  xen.hpp  xen2.hpp
src/animation/: animation_clip.cpp  animation_clip.hpp  animation_data.hpp  bone.cpp  bone.hpp  pose_animator.cpp  pose_animator.hpp  skeleton.cpp  skeleton.hpp
src/application/: application.cpp
src/audio/: audio_data.hpp  audio_system.cpp  audio_system.hpp  audio_utils.cpp  audio_utils.hpp  listener.cpp  listener.hpp  microphone.cpp  microphone.hpp  sound.cpp  sound.hpp  sound_effect.cpp  sound_effect.hpp  sound_effect_slot.cpp  sound_effect_slot.hpp
src/data/: bitset.cpp  bitset.hpp  bvh.cpp  bvh.hpp  bvh_format.cpp  bvh_format.hpp  bvh_system.cpp  bvh_system.hpp  fbx_format.hpp  fbx_load.cpp  gltf_collider_load.cpp  gltf_collider_load.hpp  gltf_format.hpp  gltf_load.cpp  graph.hpp  graph.inl  image.cpp  image.hpp  image.inl  image_format.cpp  image_format.hpp  mesh.cpp  mesh.hpp  mesh_distance_field.cpp  mesh_distance_field.hpp  mesh_format.cpp  mesh_format.hpp  obj_format.hpp  obj_load.cpp  obj_save.cpp  off_format.hpp  off_load.cpp  owner_value.hpp  submesh.cpp  submesh.hpp  tga_format.cpp  tga_format.hpp  wav_format.hpp  wav_load.cpp  wav_save.cpp
src/debug/: log.cpp  log.hpp  profiler.hpp
src/engine/: app.hpp  engine.cpp  engine.hpp  module.hpp
src/files/: binary.cpp  binary.hpp  json.cpp  json.hpp
src/input/: input_axis.hpp  input_button.hpp  input_delay.cpp  input_delay.hpp  input_scheme.cpp  input_scheme.hpp  inputs.cpp  inputs.hpp  joysticks.cpp  joysticks.hpp
src/math/: angle.hpp  math.cpp  math.hpp  math_serialization.hpp  math_types.hpp  matrix2.hpp  matrix2.inl  matrix3.hpp  matrix3.inl  matrix4.hpp  matrix4.inl  perlin_noise.cpp  perlin_noise.hpp  quaternion.cpp  quaternion.hpp  quaternion.inl  vector2.cpp  vector2.hpp  vector2.inl  vector3.cpp  vector3.hpp  vector3.inl  vector4.cpp  vector4.hpp  vector4.inl
src/old_trash/: application.hpp
src/physics/: collider.cpp  collider.hpp  collider.inl  collision_object.cpp  collision_object.hpp  force.cpp  force.hpp  frustum.cpp  frustum.hpp  kinematic_character.cpp  kinematic_character.hpp  physics.cpp  physics.hpp  physics_system.cpp  physics_system.hpp  ray.cpp  ray.hpp  rigid_body.cpp  rigid_body.hpp  rigidbody.cpp  rigidbody.hpp
src/render/: camera.cpp  camera.hpp  cubemap.cpp  cubemap.hpp  entity.hpp  frustum.hpp  graphic_objects.cpp  graphic_objects.hpp  light.hpp  material.cpp  material.hpp  mesh_renderer.cpp  mesh_renderer.hpp  mesh_renderer_data.cpp  mesh_renderer_data.hpp  overlay.cpp  overlay.hpp  render.cpp  render.hpp  render_graph.cpp  render_graph.hpp  render_graph.inl  render_pass.cpp  render_pass.hpp  render_system.cpp  render_system.hpp  render_timer.cpp  render_timer.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  submesh_renderer.cpp  submesh_renderer.hpp  texture.cpp  texture.hpp  (+3 more)
src/resource/: resources.cpp  resources.hpp
src/scene/: component.hpp  debug_camera.cpp  debug_camera.hpp  entity.cpp  entity.hpp  entity_manager.hpp  scene.cpp  scene.hpp  scenes.cpp  scenes.hpp  system.hpp  system_manager.cpp  system_manager.hpp
src/script/: lua_animation.cpp  lua_audio.cpp  lua_core.cpp  lua_data.cpp  lua_entity.cpp  lua_environment.cpp  lua_environment.hpp  lua_file_format.cpp  lua_image.cpp  lua_math.cpp  lua_matrix.cpp  lua_mesh.cpp  lua_mesh_renderer.cpp  lua_overlay_base.cpp  lua_overlay_widget.cpp  lua_physics.cpp  lua_render.cpp  lua_render_graph.cpp  lua_render_system.cpp  lua_script.cpp  lua_script.hpp  lua_shader.cpp  lua_shader_program.cpp  lua_shape.cpp  lua_texture.cpp  lua_utils.cpp  lua_vector.cpp  lua_window.cpp  lua_wrapper.cpp  lua_wrapper.hpp  lua_xr.cpp  script_system.cpp  script_system.hpp
src/system/: monitor.cpp  monitor.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp  windows.cpp  windows.hpp
src/units/: elapsed_time.cpp  elapsed_time.hpp  math.cpp  math.hpp  time.hpp  time.inl  vector2.cpp  vector2.hpp  vector2.inl
src/utils/: binary_factory.hpp  classes.hpp  color.cpp  color.hpp  color.inl  concepts.hpp  elapsed_time.cpp  elapsed_time.hpp  enum_utils.hpp  enumerate.hpp  file_utils.cpp  file_utils.hpp  filepath.cpp  filepath.hpp  fonts.hpp  health.hpp  input.hpp  json_factory copy 2.hpp  json_factory copy.hpp  json_factory.hpp  memory.cpp  plugin.cpp  plugin.hpp  ray.cpp  ray.hpp  shader_loader.cpp  shader_loader.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp  shape.cpp  shape.hpp  str_utils.hpp  texture_loader.cpp  texture_loader.hpp  thread_pool.cpp  thread_pool.hpp  threading.cpp  threading.hpp  threading.inl  time.hpp  (+10 more)
src/xr/: xr_context.cpp  xr_context.hpp  xr_session.cpp  xr_session.hpp  xr_system.cpp  xr_system.hpp
(+315 files in other folders)
